# WolPSX

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
core/: CMakeLists.txt
core/bios/: CMakeLists.txt  bios.cpp
core/cpu/: CMakeLists.txt  cpu.cpp  cpu_conf.cpp  cpu_rw.cpp  cpu_utils.cpp  ins.cpp  ins_cop0.cpp  ins_cop2.cpp  ins_special.cpp
core/cpu/tests/: CMakeLists.txt  cpu_arith_tests.cpp  cpu_test.cpp  cpu_test.hpp  cpu_test_rw.cpp  cpu_test_util.cpp
core/interconnect/: CMakeLists.txt  bus.cpp  bus_utils.cpp
core/memory/: CMakeLists.txt  ram.cpp
docs/: BIOS_8cpp_source.html  BIOS_8hpp_source.html  Bus_8cpp_source.html  Bus_8hpp_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  CPU_8cpp_source.html  CPU_8hpp_source.html  RAM_8cpp_source.html  RAM_8hpp_source.html  annotated.html  bios_8cpp_8o_8d_source.html  bios_8cpp_source.html  bios_8hpp_source.html  bus_8cpp_8o_8d_source.html  bus_8cpp_source.html  bus_8hpp_source.html  bus__utils_8cpp_8o_8d_source.html  bus__utils_8cpp_source.html  classBIOS-members.html  classBIOS.html  classBus-members.html  classBus.html  classCPU-members.html  classCPU.html  classRAM-members.html  classRAM.html  classes.html  cpu_8cpp_source.html  cpu_8dir_2cpu_8cpp_8o_8d_source.html  cpu_8dir_2cpu__conf_8cpp_8o_8d_source.html  cpu_8dir_2cpu__utils_8cpp_8o_8d_source.html  cpu_8dir_2ins_8cpp_8o_8d_source.html  cpu_8dir_2ins__cop0_8cpp_8o_8d_source.html  cpu_8dir_2ins__cop2_8cpp_8o_8d_source.html  cpu_8dir_2ins__special_8cpp_8o_8d_source.html  cpu_8hpp_source.html  cpu__conf_8cpp_source.html  cpu__nrw_8dir_2cpu_8cpp_8o_8d_source.html  cpu__nrw_8dir_2cpu__conf_8cpp_8o_8d_source.html  (+66 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+5 more)
include/: BIOS.hpp  Bus.hpp  CPU.hpp  RAM.hpp
src/: BIOS.cpp  Bus.cpp  CPU.cpp  RAM.cpp  main.cpp
(+2 files in other folders)
